assets/scss/components/_navigation.scss
/**
 * Styling common across all navigations menus,
 * even if we have to target lots of CSS classes specifically.
*/

.nav-ul {
	font-family: $title-font;

	li > .wrap {
		height: 100%;
	}
}

.nav-ul .sub-menu {

	@include media-breakpoint-up(lg) {
		width: 280px;
		left: 0;
		right: none;
		top: 85%;
	}

	li > a {
		justify-content: flex-start;
	}

	li.menu-item a:hover {
		font-weight: $bold-font-weight;
	}
}

.nav-menu-primary {
	li.menu-item {
		a {
			text-decoration: none;
		}
	}

	.wp-block-button__link.menu-item {
		background-color: var(--nv-primary-accent);
		border: $border-width solid var(--nv-text-color);
		border-radius: $border-radius;
		padding: 0.75rem 1rem;

		&:hover {
			background-color: darken( $tgwf-green400, 5% );
		}
		a {
			color: var(--nv-text-color) !important; // Override inline styles.
			font-size: 1rem;
			// font-weight: $bold-font-weight;
		}
	}
}

